cooment the code and final edits

--- a/Hannah_Richard_INST326_Project02_Template.ipynb
+++ b/Hannah_Richard_INST326_Project02_Template.ipynb
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "id": "57954c28",
    "metadata": {},
    "outputs": [
@@ -81,13 +81,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-04-21 17:46:58.641 python[11968:11837618] +[CATransaction synchronize] called within transaction\n",
-      "2024-04-21 17:47:00.795 python[11968:11837618] +[CATransaction synchronize] called within transaction\n",
-      "2024-04-21 17:47:06.058 python[11968:11837618] +[CATransaction synchronize] called within transaction\n",
-      "2024-04-21 17:47:07.844 python[11968:11837618] +[CATransaction synchronize] called within transaction\n",
-      "2024-04-21 17:47:08.722 python[11968:11837618] +[CATransaction synchronize] called within transaction\n",
-      "2024-04-21 17:47:08.984 python[11968:11837618] +[CATransaction synchronize] called within transaction\n",
-      "2024-04-21 17:47:12.680 python[11968:11837618] +[CATransaction synchronize] called within transaction\n"
+      "2024-04-21 21:36:47.743 python[16073:11894144] +[CATransaction synchronize] called within transaction\n",
+      "2024-04-21 21:36:54.074 python[16073:11894144] +[CATransaction synchronize] called within transaction\n",
+      "2024-04-21 21:37:00.648 python[16073:11894144] +[CATransaction synchronize] called within transaction\n",
+      "2024-04-21 21:37:02.739 python[16073:11894144] +[CATransaction synchronize] called within transaction\n",
+      "2024-04-21 21:37:13.650 python[16073:11894144] +[CATransaction synchronize] called within transaction\n",
+      "2024-04-21 21:37:23.811 python[16073:11894144] +[CATransaction synchronize] called within transaction\n",
+      "2024-04-21 21:37:32.717 python[16073:11894144] +[CATransaction synchronize] called within transaction\n",
+      "2024-04-21 21:37:37.730 python[16073:11894144] +[CATransaction synchronize] called within transaction\n"
      ]
     }
    ],
@@ -101,7 +102,6 @@
     "# run this code to run the program\n",
     "# to create a new note, hit the new note button and enter your note data\n",
     "# to save this note to your computer, hit the save notebook button and it will allow you to save your note to your computer\n",
-    "# you can create up to three notes\n",
     "# once you have created your three notes, you can hit the open notebook button\n",
     "# this will show you a preview of all the ntoes you have just created\n",
     "# if you click on a note preview, it will open a new window of the full note and show the user all of the data associated with that note\n",
@@ -110,7 +110,6 @@
     "# when you submit your edits by hitting the submit button, your edited note gets saved\n",
     "# once you close all the tabs except for main window, you can reopen the notebook using the open notebook button\n",
     "# once you reopen the notebook by hitting the notebook button, it will show you your orignal notes and the edited notes with their timestamp\n",
-    "\n",
     "\n",
     "# code for program:\n",
     "\n",
@@ -122,6 +121,7 @@
     "import json # import json module\n",
     "import os # import os module\n",
     "\n",
+    "\n",
     "# The MainWindow class creates a custom GUI window based on the tkinter window (tk.Tk)\n",
     "# It has an __init__() method, and three additional methods (new_note(), open_notebook(), and save_notebook())\n",
     "# These methods correspond to new, open, and save buttons in the window\n",
@@ -132,7 +132,6 @@
     "class MainWindow(tk.Tk):\n",
     "    def __init__(self):  #initialize the main window\n",
     "        super().__init__() # initialize it as a tkinter window\n",
-    "        \n",
     "        self.geometry(\"600x700\") # set the default window size\n",
     "        self.title('Main Window') #set the default window title\n",
     "        self.notebook = [] # initialize an attribute named 'notebook' as an empty list\n",
@@ -158,6 +157,7 @@
     "        allows the user to enter note data to then be saved.\n",
     "        The instance of the class is called note_window.\n",
     "        '''\n",
+    "        \n",
     "        note_window = NoteForm(self, self.notebook, self.notes) # create instance of NoteForm Class\n",
     "        return None\n",
     "\n",
@@ -171,8 +171,8 @@
     "        presenting only the title of the note to the user. From here, the user can click\n",
     "        on the notes to see more details on the notes.\n",
     "        '''\n",
+    "        \n",
     "        # edit code so that when you open notebook, it opens the working directory\n",
-    "    \n",
     "        new_window = tk.Toplevel(self) # create top level window\n",
     "        new_window.geometry(\"800x800\") # set dimensions\n",
     "        new_window.title(\"Notebook\") # title of window\n",
@@ -195,6 +195,7 @@
     "        By using the lambda n=note when we call this method, it passes the specific notebook object to this display_whole_note \n",
     "        function to make sure that the correct notebook object is being presented to the user when this method is called. \n",
     "        '''\n",
+    "        \n",
     "        note_window = tk.Toplevel(self) # create top level window\n",
     "        note_window.geometry(\"800x700\") # set dimensions \n",
     "        note_window.title(\"Note Details\") # set title\n",
@@ -216,8 +217,8 @@
     "        This method occurs when the save button is clicked.\n",
     "        This method does not save all notes at once, only the note created just prior to clicking this button is saved.\n",
     "        '''\n",
+    "        \n",
     "        # ** this file path will need to be chnaged to work on the graders computer\n",
-    "        # notes_dict = [note.to_dict() for note in self.notes]\n",
     "        file = filedialog.asksaveasfile(initialdir = 'C:/Users/theno/Documents/UMD SOPHOMORE/S2/INST 326/Group Project',\n",
     "                                          defaultextension = \".json\", \n",
     "                                          filetypes = [(\"JSON files\", \"*.json\"),\n",
@@ -230,6 +231,7 @@
     "        file.write(json_out) # write the data to the file\n",
     "        self.notes = [] # Setting self.notes to empty allows the index to always be 0\n",
     "\n",
+    "\n",
     "# the NoteForm() class creates a Toplevel window that is a note form containing fields for\n",
     "# data entry for title, text, link, and tags. It also calculates a meta field with date, time, and timezone\n",
     "# the Noteform class has an __init__() method, and a submit() method that is called by a submit button\n",
@@ -241,7 +243,6 @@
     "    \n",
     "    def __init__(self, master, notebook, notes): # initialize the new object\n",
     "        super().__init__(master) # initialize it as a toplevel window\n",
-    "\n",
     "        self.geometry(\"700x400\") # set geometry\n",
     "        self.title('Note Form') # set title\n",
     "        self.config(bg = 'light gray') # set color\n",
@@ -265,7 +266,7 @@
     "        # create note tags entry field\n",
     "        self.tag_label = tk.Label(self, bg = 'light gray', text = 'Note tag:') # tag label\n",
     "        self.tag_label.grid(padx = 10, pady = 10, row = 3, column = 0, sticky = 'e') # add label to the window\n",
-    "        self.note_tags = tk.Entry(self, width = ) # allows user to enter data\n",
+    "        self.note_tags = tk.Entry(self, width = 80) # allows user to enter data\n",
     "        self.note_tags.grid(padx = 10, pady = 10, row = 3, column = 1, sticky = 'w') # add entry field to window\n",
     "        self.note_tags.insert(0, 'Enter #tags, separated by commas') # adds default text (useful during development) for the user to enter a note tag\n",
     "        \n",
@@ -276,6 +277,7 @@
     "        self.note_link.grid(padx = 10, pady = 10, row = 4, column = 1, sticky = 'w') # add link entry to label\n",
     "        self.note_link.insert(0, 'If there is a link with this note enter it here. Else, enter \"None\"') # adds default text (useful during development) for the user to enter a note link\n",
     "        \n",
+    "        # create note author entry field\n",
     "        self.author_label = tk.Label(self, bg = 'light gray', text = 'Author:') # author label\n",
     "        self.author_label.grid(padx = 10, pady = 10, row = 5, column = 0, sticky = 'e') # add label to window\n",
     "        self.note_author = tk.Entry(self, width = 60) # allows user to enter data\n",
@@ -296,7 +298,8 @@
     "        This instance is then added to the notes variable.\n",
     "    \n",
     "        '''\n",
-    "        # calc metadata\n",
+    "        \n",
+    "        # calculate metadata\n",
     "        created = datetime.datetime.now() # get current date and time\n",
     "        local_now = created.astimezone() # shows the local time and the GMT offset\n",
     "        local_tz = local_now.tzinfo # sets timezone \n",
@@ -310,7 +313,6 @@
     "        meta = meta # sets meta to meta variable\n",
     "        author = self.note_author.get() # extract user input from author section\n",
     "\n",
-    "        \n",
     "        note_dict = {'title':title, 'text':text, 'link':link, 'tag':tag, 'meta':meta, 'author':author} # create the dictionary by creating key value pairs        \n",
     "        make_note = MakeNote(note_dict) # pass the dictionary through to the creation of the MakeNote instance called make_note\n",
     "        self.notes.append(make_note) # append the instance of the class to the notes variable\n",
@@ -348,6 +350,7 @@
     "        The dictionary is passed to the MakeNote class to form the instance make_note which creates each note edit to be presented to the user.\n",
     "        This instance is then added to the notes variable and the notebook variable.\n",
     "        '''\n",
+    "        \n",
     "        created = datetime.datetime.now() # get current date and time\n",
     "        local_now = created.astimezone() # shows the local time and the GMT offset\n",
     "        local_tz = local_now.tzinfo # sets timezone \n",
@@ -386,58 +389,54 @@
     "        It allows the user to edit all the note content.\n",
     "        This displays a submit button to save the edits.\n",
     "        '''\n",
+    "        \n",
     "        edit_window = tk.Toplevel() # creates a new top level window\n",
     "        edit_window.geometry(\"900x900\") # sets the dimensions of window\n",
     "        edit_window.title(\"Edit Snippet\") # sets title of window\n",
     "        \n",
-    "        self.edit_text_label = tk.Label(edit_window, bg= \"light gray\", text = \"Note text:\") \n",
-    "        self.edit_text_label.grid(padx = 10, pady = 10, row = 2, column = 0, sticky = \"e\")\n",
-    "        self.edit_text = tk.Text(edit_window, height = 10, width = 60)\n",
-    "        self.edit_text.grid(padx = 10, pady = 10, row = 2 , column = 1)\n",
-    "        self.edit_text.insert(\"1.0\", note.note_text)\n",
+    "        # create edit note text entry field\n",
+    "        self.edit_text_label = tk.Label(edit_window, bg= \"light gray\", text = \"Note text:\") # this creates the edit text label\n",
+    "        self.edit_text_label.grid(padx = 10, pady = 10, row = 2, column = 0, sticky = \"e\") # add label to window\n",
+    "        self.edit_text = tk.Text(edit_window, height = 10, width = 60) # allows user to enter their edits\n",
+    "        self.edit_text.grid(padx = 10, pady = 10, row = 2 , column = 1) # adds edits box in window\n",
+    "        self.edit_text.insert(\"1.0\", note.note_text) # allows user to edit original text\n",
     "\n",
-    "    \n",
-    "        # create note title entry field\n",
-    "        self.edit_title_label = tk.Label(edit_window, bg = 'light gray', text = 'Note Title:')\n",
-    "        self.edit_title_label.grid(padx = 10, pady = 10, row = 1, column = 0, sticky = 'e')\n",
-    "        self.edit_title = tk.Entry(edit_window, width = 80) # allows user to enter data\n",
-    "        self.edit_title.grid(padx = 10, pady = 10, row = 1, column = 1, sticky = 'w')\n",
-    "        self.edit_title.insert(0, note.note_title) # adds default text (useful during development)\n",
+    "        # create edit note title entry field\n",
+    "        self.edit_title_label = tk.Label(edit_window, bg = 'light gray', text = 'Note Title:') # this creates the edit title label\n",
+    "        self.edit_title_label.grid(padx = 10, pady = 10, row = 1, column = 0, sticky = 'e') # add label to window\n",
+    "        self.edit_title = tk.Entry(edit_window, width = 80) # allows user to enter their edits\n",
+    "        self.edit_title.grid(padx = 10, pady = 10, row = 1, column = 1, sticky = 'w') # adds edits box in window\n",
+    "        self.edit_title.insert(0, note.note_title) # allows user to edit original title\n",
     "        \n",
-    "        # create note tags entry field\n",
-    "        self.edit_tag_label = tk.Label(edit_window, bg = 'light gray', text = 'Note tag:')\n",
-    "        self.edit_tag_label.grid(padx = 10, pady = 10, row = 3, column = 0, sticky = 'e')\n",
-    "        self.edit_tags = tk.Entry(edit_window, width = 80) # allows user to enter data\n",
-    "        self.edit_tags.grid(padx = 10, pady = 10, row = 4, column = 1, sticky = 'w')\n",
-    "        self.edit_tags.insert(0, note.note_tag) # adds default text (useful during development)\n",
+    "        # create edit note tags entry field\n",
+    "        self.edit_tag_label = tk.Label(edit_window, bg = 'light gray', text = 'Note tag:') # this creates the edit tags label\n",
+    "        self.edit_tag_label.grid(padx = 10, pady = 10, row = 3, column = 0, sticky = 'e') # add label to window\n",
+    "        self.edit_tags = tk.Entry(edit_window, width = 80) # allows user to enter their edits\n",
+    "        self.edit_tags.grid(padx = 10, pady = 10, row = 4, column = 1, sticky = 'w') # adds edits box in window\n",
+    "        self.edit_tags.insert(0, note.note_tag) # allows user to edit original tag\n",
     "        \n",
-    "        # create note link entry field\n",
-    "        self.edit_link_label = tk.Label(edit_window, bg = 'light gray', text = 'Note link:')\n",
-    "        self.edit_link_label.grid(padx = 10, pady = 10, row = 4, column = 0, sticky = 'e')\n",
-    "        self.edit_link = tk.Entry(edit_window, width = 80) # allows user to enter data\n",
-    "        self.edit_link.grid(padx = 10, pady = 10, row = 3, column = 1, sticky = 'w')\n",
-    "        self.edit_link.insert(0, note.note_link) # adds default text (useful during development)\n",
+    "        # create edit note link entry field\n",
+    "        self.edit_link_label = tk.Label(edit_window, bg = 'light gray', text = 'Note link:') # this creates the edit link label\n",
+    "        self.edit_link_label.grid(padx = 10, pady = 10, row = 4, column = 0, sticky = 'e') # add label to window\n",
+    "        self.edit_link = tk.Entry(edit_window, width = 80) # allows user to enter their edits\n",
+    "        self.edit_link.grid(padx = 10, pady = 10, row = 3, column = 1, sticky = 'w') # adds edits box in window\n",
+    "        self.edit_link.insert(0, note.note_link) # allows user to edit original link\n",
     "        \n",
-    "        self.edit_author_label = tk.Label(edit_window, bg = 'light gray', text = 'Author:')\n",
-    "        self.edit_author_label.grid(padx = 10, pady = 10, row = 5, column = 0, sticky = 'e')\n",
-    "        self.edit_author = tk.Entry(edit_window, width = 60) # allows user to enter data\n",
-    "        self.edit_author.grid(padx = 10, pady = 10, row = 5, column = 1)\n",
-    "        self.edit_author.insert('0', note.note_author) # adds default text (useful during development\n",
-    "        \n",
-    "        # Create new note form and get the variables into each entry window \n",
-    "        # save back to original file \n",
+    "        # create edit note author entry field\n",
+    "        self.edit_author_label = tk.Label(edit_window, bg = 'light gray', text = 'Author:') # this creates the edit author label\n",
+    "        self.edit_author_label.grid(padx = 10, pady = 10, row = 5, column = 0, sticky = 'e') # add label to window\n",
+    "        self.edit_author = tk.Entry(edit_window, width = 60) # allows user to enter their edits\n",
+    "        self.edit_author.grid(padx = 10, pady = 10, row = 5, column = 1) # adds edits box in window\n",
+    "        self.edit_author.insert('0', note.note_author) # allows user to edit original author\n",
     "\n",
+    "        # create submit button\n",
     "        self.edit_submit_button = tk.Button(edit_window, bg = \"light gray\", text = \"Submit Edit:\", command = lambda n = note: self.submit_edit(n)) # when clicked, this button allows the user to save their note edits\n",
-    "        self.edit_submit_button.grid(padx = 10, pady = 10, row = 6, column = 0, sticky = \"e\")\n",
+    "        self.edit_submit_button.grid(padx = 10, pady = 10, row = 6, column = 0, sticky = \"e\") # add edit submit button to window\n",
     "        \n",
-    "        self.user_label = tk.Label(edit_window, bg = 'light gray', text = 'To see your edited and original notes, you must close and reopen the notebook')\n",
-    "        self.user_label.grid(padx = 10, pady = 10, row = 7, column = 1, sticky = 'e')\n",
+    "        # create user instructions label\n",
+    "        self.user_label = tk.Label(edit_window, bg = 'light gray', text = 'To see your edited and original notes, you must close and reopen the notebook') # create label to give users instructions\n",
+    "        self.user_label.grid(padx = 10, pady = 10, row = 7, column = 1, sticky = 'e') # add label instructions to the window\n",
     "        \n",
-    "        \n",
-    "    \n",
-    "    \n",
-    "        \n",
-    "         \n",
     "    \n",
     "# main execution\n",
     "\n",
@@ -459,7 +458,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "id": "dd1811bf",
    "metadata": {},
    "outputs": [
